--- a/backend/static/input.css
+++ b/backend/static/input.css
@@ -9,6 +9,7 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: Inter,ui-sans-serif,system-ui,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
+    background-color: oklch(var(--b2));
 }
 
 #main{
