--- a/backend/static/input.css
+++ b/backend/static/input.css
@@ -5,11 +5,11 @@
 /* @import "../frontend/node_modules/bootstrap/scss/bootstrap.scss"; */
 
 html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
-    /* font-family: 'Open Sans', sans-serif; */
-    /* font-family: 'Poppins', sans-serif !important; */
-    font-family: "Montserrat", sans-serif !important;
+    font-family: "Jost", sans-serif !important;
+    font-style: normal;
     font-size: 16px;
     line-height: 1.5;
     color: #07030a !important;
@@ -22,7 +22,6 @@ html, body {
     left:0;
     top:0;
 }
-
 :root {
     --b1: #f8f1f9;
     --fallback-b1: #f8f1f9;
