--- a/backend/static/input.css
+++ b/backend/static/input.css
@@ -13,9 +13,9 @@ html, body {
     font-size: 16px;
     line-height: 1.5;
     color: #07030a !important;
-    height: 100%;
     min-height: 100%;
     background-color: #f8f1f9 !important;
+    min-width: 600px;
 }
 
 #main{
