modify node and environment types and actually enforce typing objects in dashboard lol

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -90,4 +90,10 @@ html, body {
   body {
     @apply dark:bg-stone-800 bg-muted text-foreground;
   }
+  html {
+    @apply dark:bg-stone-800 bg-muted text-foreground;
+  }
+  #main {
+    @apply dark:bg-stone-800 bg-muted text-foreground;
+  }
 }
