--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -687,6 +687,10 @@ body{
   margin-bottom: 1rem;
 }
 
+.mb-6{
+  margin-bottom: 1.5rem;
+}
+
 .mr-2{
   margin-right: 0.5rem;
 }
@@ -761,6 +765,10 @@ body{
 
 .max-h-screen{
   max-height: 100vh;
+}
+
+.min-h-\[200px\]{
+  min-height: 200px;
 }
 
 .min-h-\[80px\]{
