added websocketdebug page to see data coming through and debug if any problems. was able to connect system, node, and environment detail pages to the websocket. need to make a few adjustments, but data is flowing. will work on config pages next.

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
-    <script type="module" crossorigin src="/assets/index-Df2aJX9P.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-CwG9ftxn.css">
+    <script type="module" crossorigin src="/assets/index-CTPNzor8.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-CHbd_aTs.css">
   </head>
   <body>
     <div id="root"></div>
