--- a/backend/static/output.css
+++ b/backend/static/output.css
@@ -751,6 +751,10 @@ body{
   height: 4rem;
 }
 
+.h-3{
+  height: 0.75rem;
+}
+
 .h-4{
   height: 1rem;
 }
@@ -771,8 +775,16 @@ body{
   height: 2.25rem;
 }
 
+.h-96{
+  height: 24rem;
+}
+
 .h-full{
   height: 100%;
+}
+
+.max-h-60{
+  max-height: 15rem;
 }
 
 .max-h-screen{
@@ -805,6 +817,10 @@ body{
 
 .w-24{
   width: 6rem;
+}
+
+.w-3{
+  width: 0.75rem;
 }
 
 .w-4{
@@ -1065,6 +1081,11 @@ body{
   background-color: hsl(var(--destructive));
 }
 
+.bg-green-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(34 197 94 / var(--tw-bg-opacity, 1));
+}
+
 .bg-green-500\/20{
   background-color: rgb(34 197 94 / 0.2);
 }
@@ -1075,6 +1096,11 @@ body{
 
 .bg-primary{
   background-color: hsl(var(--primary));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 
 .bg-secondary{
