working file tree and container log file/folder listing

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ABRA</title>
-    <script type="module" crossorigin src="/assets/index-D0w8ddT4.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/index-s0KKjCIQ.css">
+    <script type="module" crossorigin src="/assets/index-BoK-iUwf.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/index-B3ozRL-w.css">
   </head>
   <body>
     <div id="root"></div>
